--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -78,7 +78,7 @@ jobs:
       
     - name: Fix the bug of missing common
       if: steps.var.outputs.use_repair_manifest == 'true' && steps.var.outputs.fix_misscom == 'true'
-      run: cp repair/omni-9.0/qcom.xml workspace/.repo/local_manifests/
+      run: cp repair/twrp-12.1/qcom.xml workspace/.repo/local_manifests/
       
     - name: Fix busybox bug
       if: steps.var.outputs.use_repair_manifest == 'true' && steps.var.outputs.fix_busybox == 'true'
